refactor: remove DbDialectSqlOperations and unused dialect methods (YAGNI)